tests/baselines/reference/methodContainingLocalFunction.errors.txt
methodContainingLocalFunction.ts(35,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== methodContainingLocalFunction.ts (1 errors) ====
    // The first case here (BugExhibition<T>) caused a crash. Try with different permutations of features.
    class BugExhibition<T> {
        public exhibitBug() {
            function localFunction() { }
            var x: { (): void; };
            x = localFunction;
        }
    }
    
    class BugExhibition2<T> {
        private static get exhibitBug() {
            function localFunction() { }
            var x: { (): void; };
            x = localFunction;
            return null;
        }
    }
    
    class BugExhibition3<T> {
        public exhibitBug() {
            function localGenericFunction<U>(u?: U) { }
            var x: { (): void; };
            x = localGenericFunction;
        }
    }
    
    class C {
        exhibit() {
            var funcExpr = <U>(u?: U) => { };
            var x: { (): void; };
            x = funcExpr;
        }
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function exhibitBug() {
            function localFunction() { }
            var x: { (): void; };
            x = localFunction;
        }
    }
    
    enum E {
        A = (() => {
            function localFunction() { }
            var x: { (): void; };
            x = localFunction;
            return 0;
        })()
    }